classDiagram
    class User {
        +int id
        +string username
        +string password
        +string email
    }

    class Children {
        +int id
        +string child_name
        +int sleep_average
        +int treatment_id
        +int time
    }
    class Taps {
        +int id
        +int child_id
        +int status_id
        +int user_id
        +string init
        +string end
    }
    class Roles {
        +int id
        +string type_rol
    }
    class Statuses {
        +int id
        +string name
    }
    class Treatments {
        +int id
        +string name
    }
    %% Relaciones
    User --> Taps: tiene
    User --> Roles: tiene
    Children --> Taps: tiene
    Children --> Roles: tiene
    Statuses --> Taps: tiene
    Treatments --> Children: tiene

    %% Relación entre tablas intermedias
    User --> Children: tiene
    Roles --> Children: tiene
